# btc-infra-tools

./: .env.example  .mise.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  belter.toml  justfile  lefthook.yml
crates/infractl-adapters/: Cargo.toml
crates/infractl-adapters/src/: executor.rs  lib.rs
crates/infractl-cli/: Cargo.toml
crates/infractl-cli/src/: cli.rs  main.rs  output.rs  runtime.rs
crates/infractl-cli/src/commands/: config.rs  service.rs
crates/infractl-cli/tests/: cli_error_test.rs  cli_service_plan_test.rs  cli_service_status_test.rs  cli_smoke_test.rs  cli_test.rs
crates/infractl-cli/tests/common/: belter_bin.rs  mod.rs  repo_root.rs  unique_fixture_dir.rs
crates/infractl-core/: Cargo.toml
crates/infractl-core/src/: config.rs  env.rs  lib.rs  output.rs  plan.rs  time.rs  usecase.rs
docs/: architecture-btc-infra-tools.md  architecture.md  belter-command-reference.md  cli-tui-multirepo-rfc.md  command-reference.md
