[package]
name = "belter"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "belter"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
infractl-core = { path = "../infractl-core" }
infractl-adapters = { path = "../infractl-adapters" }
