[package]
name = "belter"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "belter"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
infractl-core = { path = "../infractl-core" }
infractl-adapters = { path = "../infractl-adapters" }
